# test-ubuntu

./: .gitignore  CMakeLists.txt  README.md
include/: ImageFetcher.h  ImageFetcherInterface.h
src/: ImageFetcher.cpp  main.cpp
